fix alignment on search bar

--- a/client/src/components/DevelopersList.css
+++ b/client/src/components/DevelopersList.css
@@ -13,10 +13,10 @@
 }
 
 .search-bar {
-  margin: 50px auto 50px auto;
+  margin: 50px auto;
   background-color: #d0cde1;
   height: 80px;
-  width: 800px;
+  max-width: 800px;
   display: flex;
   align-items: center;
   border-radius: 15px;
